[build-system]
requires = ["hatchling", "uv", "polars", "rich"]
build-backend = "hatchling.build"

[project]
name = "polars_ipums"
version = "0.0.1"
authors = [
  { name="Alistair Pattison", email="alistairpattison@gmail.com" },
]
description = "A package to clean and load IPUMS microdata with Polars."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/alipatti/polars_ipums"

